kong/ingress-controller.yaml
apiVersion: v1
kind: Service
metadata:
  name: kong-ingress-controller
  namespace: kong
spec:
  type: NodePort
  ports:
    - name: kong-admin
      port: 8001
      targetPort: 8001
      protocol: TCP
  selector:
    app: ingress-kong

---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: ingress-kong
  name: kong-ingress-controller
  namespace: kong
spec:
  selector:
    matchLabels:
      app: ingress-kong
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      annotations:
        # the returned metrics are related to the kong ingress controller not kong itself
        prometheus.io/port: "10254"
        prometheus.io/scrape: "true"
      labels:
        app: ingress-kong
    spec:
      serviceAccountName: kong-serviceaccount
      imagePullSecrets:
        - name: regcred
      containers:
        - name: admin-api
          image: registry.gitlab.com/goatlab/corporate/kong-oidc:1.1.2
          imagePullPolicy: Always
          ports:
            - name: kong-admin
              containerPort: 8001
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /status
              port: 8001
              scheme: HTTP
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /status
              port: 8001
              scheme: HTTP
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
        - name: ingress-controller
          args:
            - /kong-ingress-controller
            # the kong URL points to the kong admin api server
            - --kong-url=https://localhost:8444
            - --admin-tls-skip-verify
            - --default-backend-service=kong/kong-proxy
            # Service from were we extract the IP address/es to use in Ingress status
            - --publish-service=kong/kong-proxy
            - --v=6
          image: kong-docker-kubernetes-ingress-controller.bintray.io/kong-ingress-controller:0.3.0
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /healthz
              port: 10254
              scheme: HTTP
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /healthz
              port: 10254
              scheme: HTTP
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
