kong/kong.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: kong
  namespace: kong
spec:
  template:
    metadata:
      labels:
        name: kong
        app: kong
    spec:
      containers:
        - name: kong-proxy
          image: registry.gitlab.com/goatlab/corporate/kong-oidc:1.1.2
          imagePullPolicy: Always
          ports:
            - name: proxy
              containerPort: 8000
              protocol: TCP
            - name: proxy-ssl
              containerPort: 8443
              protocol: TCP
          lifecycle:
            preStop:
              exec:
                command: ["/bin/sh", "-c", "kong quit"]
      imagePullSecrets:
        - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  name: kong-proxy
  namespace: kong
spec:
  type: LoadBalancer
  ports:
    - name: kong-proxy
      port: 80
      targetPort: 8000
      protocol: TCP
    - name: kong-proxy-ssl
      port: 443
      targetPort: 8443
      protocol: TCP
  loadBalancerIP: 34.67.166.77
  selector:
    app: kong
