kong/admin-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kong-admin
  namespace: kong
  annotations:
    kubernetes.io/ingress.class: "kong"
spec:
  rules:
    - host: admin.35.222.213.192.nip.io
      http:
        paths:
          - path: "/"
            backend:
              serviceName: kong-ingress-controller
              servicePort: 8001
